--- a/aula05/.vscode/settings.json
+++ b/aula05/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "maven.terminal.useJavaHome": true
+    "maven.terminal.useJavaHome": true,
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
